# ai4os-image-classification-tf

./: Dockerfile  JenkinsConstants.groovy  Jenkinsfile  README.md  ai4-metadata.yml  metadata.json  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.sqa/: Dockerfile.cicd  config.yml  docker-compose.yml
imgclas/: api.py  config.py  data_utils.py  model_utils.py  optimizers.py  paths.py  plot_utils.py  test_utils.py  train_runfile.py  utils.py
imgclas/tests/: test_methods.py
imgclas/visualization/: guided_backprop.py  integrated_gradients.py  saliency.py
imgclas/webpage/: serve.py
misc/: launch_devend.sh  setup_devenv.sh
tests/: conftest.py  test_api.py
tests/test_metadata/: conftest.py  test_requirements.py
tests/test_predictions/: conftest.py  test_requirements.py
