[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "imgclas"
description = "add api to imgclas"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "apache 2.0" }
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: AI/ML/DL Researchers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
]
dynamic = ["version", "dependencies"]

# Add author and author email here
authors = [{name= "Ignacio Heredia (CSIC)", email= "iheredia@ifca.unican.es"} ]

[project.urls]
"Homepage" = "https://github.com/ai4os-hub/ai4os-image-classification-tf"
"Bug Tracker" = "https://github.com/ai4os-hub/ai4os-image-classification-tf/issues"

[tool.pytest.ini_options]
pythonpath = ["."]
env = ["DATA_PATH=tests/data", "MODELS_PATH=tests/models"]
addopts = "--import-mode=importlib"

[tool.setuptools]
packages = ["imgclas"]



[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
version = { file = "VERSION" }

[project.entry-points."deepaas.v2.model"]
imgclas = "imgclas.api"